[project]
name = "nton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "redis>=8.0.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
